--- a/example/date.html
+++ b/example/date.html
@@ -79,9 +79,9 @@
             //init other data.
             var $input = $(this),
                 dataKey = $input.attr("data-key"),
-                yearKey = thisYear, //default province 北京
-                monthKey = 1, //default city 北京
-                dayKey = 1, //default district 北京东城区
+                yearKey = thisYear, //default year
+                monthKey = 1, //default month
+                dayKey = 1, //default day 
                 yearStartIndex = 0, //default 0
                 monthStartIndex = 0, //default 0
                 dayStartIndex = 0; //default 0
