add new file .gitignore

--- a/example/address.html
+++ b/example/address.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Address Scroll Cascade Select</title>
@@ -11,119 +12,135 @@
     <link href="../dist/css/layout.min.css" rel="stylesheet" />
     <link href="../dist/css/scs.min.css" rel="stylesheet" />
     <style>
-        #myAddrs {
-            width: 90%;
-            font-size: 16px;
-            border: 1px solid #bababa;
-            border-radius: 4px;
-            padding: 10px;
-            margin-top:10px;
-            color:gray;
-        }
+    #myAddrs {
+        width: 90%;
+        font-size: 16px;
+        border: 1px solid #bababa;
+        border-radius: 4px;
+        padding: 10px;
+        margin-top: 10px;
+        color: gray;
+    }
     </style>
 </head>
+
 <body>
-    <div style="text-align:center"><input type="text" readonly placeholder="Click me to pick an address" id="myAddrs" name="addr" data-key="4-84-1298" value="山西省 太原市 万柏林区" /></div>
+    <div style="text-align:center">
+        <input type="text" readonly placeholder="Click me to pick an address" id="myAddrs" name="addr" data-key="4-84-1298" value="山西省 太原市 万柏林区" />
+    </div>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="../dist/js/jquery.scs.min.js"></script>
     <script src="../dist/js/CNAddrArr.min.js"></script>
     <script>
-        $(function () {
-            //get the city/district data by id from source array 'addr_arr' 
-            function getAddrsArrayById(id) {
-                var results = [];
-                if (addr_arr[id] != undefined)
-                    addr_arr[id].forEach(function (subArr) {
-                        results.push({ key: subArr[0], val: subArr[1] });
+    $(function() {
+        //get the city/district data by id from source array 'addr_arr' 
+        function getAddrsArrayById(id) {
+            var results = [];
+            if (addr_arr[id] != undefined)
+                addr_arr[id].forEach(function(subArr) {
+                    results.push({
+                        key: subArr[0],
+                        val: subArr[1]
                     });
-                else {
-                    return;
-                }
-                return results;
+                });
+            else {
+                return;
             }
-            //get the start index by key from the startArr, format: [{key:'1',val:'北京'},...].
-            function getStartIndexByKeyFromStartArr(StartArr, key) {
-                var result = 0;
-                if (StartArr != undefined)
-                    StartArr.forEach(function (obj, index) {
-                        if (obj.key == key) {
-                            result = index;
-                            return false;
-                        }
-                    });
-                return result;
-            }
+            return results;
+        }
+        //get the start index by key from the startArr, format: [{key:'1',val:'北京'},...].
+        function getStartIndexByKeyFromStartArr(StartArr, key) {
+            var result = 0;
+            if (StartArr != undefined)
+                StartArr.forEach(function(obj, index) {
+                    if (obj.key == key) {
+                        result = index;
+                        return false;
+                    }
+                });
+            return result;
+        }
 
-            //bind the click event for 'input' element
-            $("#myAddrs").click(function () {
-                var PROVINCES = [],
-                    startCities = [],
-                    startDists = [];
-                //Province data，shall never change.
-                addr_arr[0].forEach(function (prov) {
-                    PROVINCES.push({ key: prov[0], val: prov[1] });
-                });
-                //init other data.
-                var $input = $(this),
-                    dataKey = $input.attr("data-key"),
-                    provKey = 1,//default province 北京
-                    cityKey = 36,//default city 北京
-                    distKey = 37,//default district 北京东城区
-                    distStartIndex = 0,//default 0
-                    cityStartIndex = 0,//default 0
-                    provStartIndex = 0;//default 0
-
-                if (dataKey != "" && dataKey != undefined) {
-                    var sArr = dataKey.split("-");
-                    if (sArr.length == 3) {
-                        provKey = sArr[0];
-                        cityKey = sArr[1];
-                        distKey = sArr[2];
-
-                    } else if (sArr.length == 2) {//such as 台湾，香港 and the like.
-                        provKey = sArr[0];
-                        cityKey = sArr[1];
-                    }
-                    startCities = getAddrsArrayById(provKey);
-                    startDists = getAddrsArrayById(cityKey);
-                    provStartIndex = getStartIndexByKeyFromStartArr(PROVINCES, provKey);
-                    cityStartIndex = getStartIndexByKeyFromStartArr(startCities, cityKey);
-                    distStartIndex = getStartIndexByKeyFromStartArr(startDists, distKey);
-                }
-                SCS.init({
-                    navArr: [
-                        { title: "省", id: "scs_items_prov" },
-                        { title: "市", id: "scs_items_city" },
-                        { title: "区", id: "scs_items_dist" }
-                    ],
-                    onOk: function (selectedKey, selectedValue) {
-                        $input.val(selectedValue).attr("data-key", selectedKey);
-                    }
-                });
-                var distScroller = new SCS.scrollCascadeSelect({
-                    el: "#scs_items_dist",
-                    dataArr: startDists,
-                    startIndex: distStartIndex
-                });
-                var cityScroller = new SCS.scrollCascadeSelect({
-                    el: "#scs_items_city",
-                    dataArr: startCities,
-                    startIndex: cityStartIndex,
-                    onChange: function (selectedItem, selectedIndex) {
-                        distScroller.render(getAddrsArrayById(selectedItem.key), 0);//re-render distScroller when cityScroller change
-                    }
-                });
-                var provScroller = new SCS.scrollCascadeSelect({
-                    el: "#scs_items_prov",
-                    dataArr: PROVINCES,
-                    startIndex: provStartIndex,
-                    onChange: function (selectedItem, selectedIndex) {//re-render both cityScroller and distScroller when provScroller change
-                        cityScroller.render(getAddrsArrayById(selectedItem.key), 0);
-                        distScroller.render(getAddrsArrayById(cityScroller.getSelectedItem().key), 0);
-                    }
+        //bind the click event for 'input' element
+        $("#myAddrs").click(function() {
+            var PROVINCES = [],
+                startCities = [],
+                startDists = [];
+            //Province data，shall never change.
+            addr_arr[0].forEach(function(prov) {
+                PROVINCES.push({
+                    key: prov[0],
+                    val: prov[1]
                 });
             });
+            //init other data.
+            var $input = $(this),
+                dataKey = $input.attr("data-key"),
+                provKey = 1, //default province 北京
+                cityKey = 36, //default city 北京
+                distKey = 37, //default district 北京东城区
+                distStartIndex = 0, //default 0
+                cityStartIndex = 0, //default 0
+                provStartIndex = 0; //default 0
+
+            if (dataKey != "" && dataKey != undefined) {
+                var sArr = dataKey.split("-");
+                if (sArr.length == 3) {
+                    provKey = sArr[0];
+                    cityKey = sArr[1];
+                    distKey = sArr[2];
+
+                } else if (sArr.length == 2) { //such as 台湾，香港 and the like.
+                    provKey = sArr[0];
+                    cityKey = sArr[1];
+                }
+                startCities = getAddrsArrayById(provKey);
+                startDists = getAddrsArrayById(cityKey);
+                provStartIndex = getStartIndexByKeyFromStartArr(PROVINCES, provKey);
+                cityStartIndex = getStartIndexByKeyFromStartArr(startCities, cityKey);
+                distStartIndex = getStartIndexByKeyFromStartArr(startDists, distKey);
+            }
+            var navArr = [{//3 scrollers, and the title and id will be as follows:
+                title: "省",
+                id: "scs_items_prov"
+            }, {
+                title: "市",
+                id: "scs_items_city"
+            }, {
+                title: "区",
+                id: "scs_items_dist"
+            }];
+            SCS.init({
+                navArr: navArr,
+                onOk: function(selectedKey, selectedValue) {
+                    $input.val(selectedValue).attr("data-key", selectedKey);
+                }
+            });
+            var distScroller = new SCS.scrollCascadeSelect({
+                el: "#" + navArr[2].id,
+                dataArr: startDists,
+                startIndex: distStartIndex
+            });
+            var cityScroller = new SCS.scrollCascadeSelect({
+                el: "#" + navArr[1].id,
+                dataArr: startCities,
+                startIndex: cityStartIndex,
+                onChange: function(selectedItem, selectedIndex) {
+                    distScroller.render(getAddrsArrayById(selectedItem.key), 0); //re-render distScroller when cityScroller change
+                }
+            });
+            var provScroller = new SCS.scrollCascadeSelect({
+                el: "#" + navArr[0].id,
+                dataArr: PROVINCES,
+                startIndex: provStartIndex,
+                onChange: function(selectedItem, selectedIndex) { //re-render both cityScroller and distScroller when provScroller change
+                    cityScroller.render(getAddrsArrayById(selectedItem.key), 0);
+                    distScroller.render(getAddrsArrayById(cityScroller.getSelectedItem().key), 0);
+                }
+            });
         });
+    });
     </script>
 </body>
+
 </html>
