--- a/example/date.html
+++ b/example/date.html
@@ -31,38 +31,43 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="../dist/js/jquery.scs.min.js"></script>
     <script>
-        function getDaysByMonthNYear(month, year) {
-            var count = 0, days = [];
-            if (month == 1 || month == 3 || month == 5 || month == 7 || month == 8 || month == 10 || month == 12) {
-                count = 31;
-            } else if (month == 4 || month == 6 || month == 9 || month == 11) {
-                count = 30;
-            } else if (month == 2) {
-                if (isLeapYear(year)) {
-                    count = 29;
-                } else {
-                    count = 28;
-                }
-            }
-            for (var i = 1; i <= count; i++) {
-                days.push({ key: i, val: i < 10 ? '0' + i : i });
-            } 
-            return days;
-        } 
-        function isLeapYear(Year) {
-            if (((Year % 4) == 0) && ((Year % 100) != 0) || ((Year % 400) == 0)) {
-                return true;
+    function getDaysByMonthNYear(month, year) {
+        var count = 0,
+            days = [];
+        if (month == 1 || month == 3 || month == 5 || month == 7 || month == 8 || month == 10 || month == 12) {
+            count = 31;
+        } else if (month == 4 || month == 6 || month == 9 || month == 11) {
+            count = 30;
+        } else if (month == 2) {
+            if (isLeapYear(year)) {
+                count = 29;
             } else {
-                return false;
+                count = 28;
             }
-        }      
-    $(function() {             
+        }
+        for (var i = 1; i <= count; i++) {
+            days.push({
+                key: i,
+                val: i < 10 ? '0' + i : i
+            });
+        }
+        return days;
+    }
+
+    function isLeapYear(Year) {
+        if (((Year % 4) == 0) && ((Year % 100) != 0) || ((Year % 400) == 0)) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+    $(function() {
         //bind the click event for 'input' element
         $("#myDate").click(function() {
             var YEARS = [],
                 MONTHS = [],
                 DAYS = [],
-                thisYear = (new Date()).getFullYear();//or from the server
+                thisYear = (new Date()).getFullYear(); //or from the server
             //YEARS MONTHS and DAYS data，shall never change.
             for (var i = thisYear; i >= 1910; i--) {
                 YEARS.push({
@@ -93,48 +98,49 @@
                     monthKey = sArr[1];
                     dayKey = sArr[2];
                 }
-                DAYS = getDaysByMonthNYear(monthKey,yearKey);                        
-                yearStartIndex = thisYear-parseInt(yearKey);
-                monthStartIndex = parseInt(monthKey)-1;
-                dayStartIndex = parseInt(dayKey)-1;
+                DAYS = getDaysByMonthNYear(monthKey, yearKey);
+                yearStartIndex = thisYear - parseInt(yearKey);
+                monthStartIndex = parseInt(monthKey) - 1;
+                dayStartIndex = parseInt(dayKey) - 1;
             }
+            var navArr = [{//3 scrollers, and the title and id will be as follows:
+                title: "年",
+                id: "scs_items_year"
+            }, {
+                title: "月",
+                id: "scs_items_month"
+            }, {
+                title: "日",
+                id: "scs_items_day"
+            }];
             SCS.init({
-                navArr: [{
-                    title: "年",
-                    id: "scs_items_year"
-                }, {
-                    title: "月",
-                    id: "scs_items_month"
-                }, {
-                    title: "日",
-                    id: "scs_items_day"
-                }],
+                navArr: navArr,
                 onOk: function(selectedKey, selectedValue) {
-                    var strArr=selectedValue.split(" ");
-                    $input.val(strArr[0]+"年"+strArr[1]+"月"+strArr[2]+"日").attr("data-key", selectedKey);
+                    var strArr = selectedValue.split(" ");
+                    $input.val(strArr[0] + "年" + strArr[1] + "月" + strArr[2] + "日").attr("data-key", selectedKey);
                 }
             });
             var dayScroller = new SCS.scrollCascadeSelect({
-                el: "#scs_items_day",
+                el: "#" + navArr[2].id,
                 dataArr: DAYS,
                 startIndex: dayStartIndex
             });
             var yearScroller = new SCS.scrollCascadeSelect({
-                el: "#scs_items_year",
+                el: "#" + navArr[0].id,
                 dataArr: YEARS,
                 startIndex: yearStartIndex,
                 onChange: function(selectedItem, selectedIndex) { //re-render dayScroller when yearScroller change
-                    dayScroller.render(getDaysByMonthNYear(1,selectedItem.key), 0);
+                    dayScroller.render(getDaysByMonthNYear(1, selectedItem.key), 0);
                 }
             });
             var monthScroller = new SCS.scrollCascadeSelect({
-                el: "#scs_items_month",
+                el: "#" + navArr[1].id,
                 dataArr: MONTHS,
                 startIndex: monthStartIndex,
                 onChange: function(selectedItem, selectedIndex) {
-                    dayScroller.render(getDaysByMonthNYear(selectedItem.key , yearScroller.getSelectedItem().key), 0); //re-render dayScroller when cityScroller change
+                    dayScroller.render(getDaysByMonthNYear(selectedItem.key, yearScroller.getSelectedItem().key), 0); //re-render dayScroller when cityScroller change
                 }
-            });            
+            });
         });
     });
     </script>
